<resources>
    <string name="app_name">Erbil</string>
    <string name="guess">Guess:</string>
    <string name="avg">Average:</string>
    <string name="ingoal">Inside target:</string>
    <string name="recent">Recent:</string>
    <string name="mmol">mmol/L</string>
    <string name="history">History:</string>
    <string name="timestamp">Timestamp:</string>
    <string name="readingstatus">Reading...</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_share">ShareActivity</string>
</resources>
